--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ env:
 sudo: required
 node_js:
     - '8'
-    - '6'
-services:
-  - mongodb
+    - '6'    
+   addons:
+  apt:
+    packages:
+    - mongodb
+    - docker-ce
